--- a/css/wize-mice-lp.webflow.css
+++ b/css/wize-mice-lp.webflow.css
@@ -818,7 +818,7 @@
   opacity: 1;
   backface-visibility: hidden;
   direction: ltr;
-  color: var(--_wizemice---wizewhite);
+  color: var(--_wizemice---wizeblack);
   text-align: left;
   text-transform: none;
   overflow-wrap: normal;
